--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@testing-library/user-event": "^13.5.0",
         "antd": "^5.5.2",
         "axios": "^1.4.0",
+        "braintree-web-drop-in-react": "^1.2.1",
         "concurrently": "^8.0.1",
         "cors": "^2.8.5",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
