--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 REACT_APP_API = http://localhost:8000
+REACT_APP_apiKey: "AIzaSyAYsK8pupR4eBzWhihYyyjAhoj0hAmfMl0",
+  REACT_APP_authDomain: "abcl-client.firebaseapp.com",
+  REACT_APP_projectId: "abcl-client",
+  REACT_APP_storageBucket: "abcl-client.appspot.com",
+  REACT_APP_messagingSenderId: "352453017947",
+  REACT_APP_appId: "1:352453017947:web:131a1105005fae97129a7e",
+  REACT_APP_measurementId: "G-P5C8EB3YQQ"
