--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "chart.js": "^4.3.0",
         "concurrently": "^8.0.1",
         "cors": "^2.8.5",
+        "firebase": "^9.22.2",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
         "react-chartjs-2": "^5.2.0",
+        "react-date-range": "^1.4.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-hot-toast": "^2.4.1",
