--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-REACT_APP_API = http://localhost:8000
-REACT_APP_apiKey: "AIzaSyAYsK8pupR4eBzWhihYyyjAhoj0hAmfMl0",
-  REACT_APP_authDomain: "abcl-client.firebaseapp.com",
-  REACT_APP_projectId: "abcl-client",
-  REACT_APP_storageBucket: "abcl-client.appspot.com",
-  REACT_APP_messagingSenderId: "352453017947",
-  REACT_APP_appId: "1:352453017947:web:131a1105005fae97129a7e",
-  REACT_APP_measurementId: "G-P5C8EB3YQQ"
+REACT_APP_API = https://abcl-server.vercel.app
+REACT_APP_apiKey: "AIzaSyBQXdg3Xb1Hwj91YwbA5bhAkydB1k7fSlc",
+  REACT_APP_authDomain: "abcl-it-client.firebaseapp.com",
+  REACT_APP_projectId: "abcl-it-client",
+  REACT_APP_storageBucket: "abcl-it-client.appspot.com",
+  REACT_APP_messagingSenderId: "525430648705",
+  REACT_APP_appId: "1:525430648705:web:51ecaf8c93afe916a14280",
