--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
+        "@sendgrid/mail": "^7.7.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,7 @@
         "react-date-range": "^1.4.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
+        "react-hook-form": "^7.45.0-next.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.9.0",
         "react-iframe": "^1.8.5",
